--- a/index.html
+++ b/index.html
@@ -1,18 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NewYork Times</title>
-    <link rel="stylesheet" href="style.css">
-</head>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<body>
-    <h1>hello world</h1>
-    <button class="btn">Click Me!</button>
-    <h1>hi i am nayan</h1>
-</body>
+  <body>
+    <div class="header">
+      <div class="top-nav-main">
+        <div class="top-navbar-left">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="20"
+            height="20"
+            fill="black"
+            class="bi bi-list icon-menu"
+            viewBox="0 0 16 16"
+          >
+            <path
+              fill-rule="evenodd"
+              d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"
+            />
+          </svg>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="black"
+            width="14px"
+            id="search"
+            viewBox="0 0 512 512"
+            class="icon-search"
+          >
+            <path
+              d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352c79.5 0 144-64.5 144-144s-64.5-144-144-144S64 128.5 64 208s64.5 144 144 144z"
+            />
+          </svg>
+          <input
+            type="search"
+            class="search hiddenbtn"
+            id="search-popup"
+            placeholder="SEARCH"
+          />
+          <button type="button" id="btn" class="btn hiddenbtn">GO</button>
+        </div>
+        <div class="top-navbar-middle">sdfsdf</div>
+        <div class="top-navbar-right">sdfsd</div>
+      </div>
+      <div class="middle-navbar"></div>
+      <p>hi i am middle navbar</p>
 
+      <div class="bottom-navbar"></div>
+      <p>hi i am bottom navbar</p>
+    </div>
+
+    <script src="script.js"></script>
+  </body>
 </html>
