--- a/index.html
+++ b/index.html
@@ -45,8 +45,17 @@
           />
           <button type="button" id="btn" class="btn hiddenbtn">GO</button>
         </div>
-        <div class="top-navbar-middle">sdfsdf</div>
-        <div class="top-navbar-right">sdfsd</div>
+        <div class="top-navbar-middle">
+          <a href="#">U.S</a>
+          <a href="#" style="font-weight: bold">INTERNATIONAL</a>
+          <a href="#">Español</a>
+          <a href="#">中文</a>
+        </div>
+        <div class="top-navbar-right">
+          <button class="subscription"><b>SUBSCRIBE FOR ₹600/YEAR</b></button>
+          <span class="account">Account <svg xmlns="http://www.w3.org/2000/svg" class="downarrow" viewBox="0 0 512 512" width="8px"><path d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"/></svg></span>
+          
+        </div>
       </div>
       <div class="middle-navbar"></div>
       <p>hi i am middle navbar</p>
